블루투스 다중 연결 시도 0524

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Logo">향토유전자원연구소</string>
     <string name="action_settings">Settings</string>
     <string name="logo" />
+    <string name="title_activity_bio_contents">BioContentsActivity</string>
 </resources>
